Fixed Padding in Summary container

--- a/components/InGame/GameDetails/SummaryOfCurrentGame/SummaryOfCurrentGame.module.css
+++ b/components/InGame/GameDetails/SummaryOfCurrentGame/SummaryOfCurrentGame.module.css
@@ -1,9 +1,8 @@
 .summary_mainContainer {
     height: 83.333333%;
     padding: 30px;
-    /* position: relative; */
+    position: relative;
     background-color: #3BC68D;
-    padding: 1;
     border-bottom-right-radius: 6px;
     border-bottom-left-radius: 6px;
 }
