--- a/components/Components.module.css
+++ b/components/Components.module.css
@@ -15,6 +15,8 @@
 
 .footer_container {
     text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 
 @media screen and (max-width: 700px) {
