--- a/components/HomePage/Rules/Rules.module.css
+++ b/components/HomePage/Rules/Rules.module.css
@@ -16,22 +16,48 @@
 }
 
 .rules_p {
-    margin-top: 40px;
+    margin-top: 20px;
     overflow-y: auto;
     padding: 10px;
 }
 
 .rules_p::-webkit-scrollbar {
-    width: 3px;
-  }
+   width: 3px;
+}
   
-  .rules_p::-webkit-scrollbar-track {
-    background: transparent;
-  }
+.rules_p::-webkit-scrollbar-track {
+  background: transparent;
+}
   
   .rules_p::-webkit-scrollbar-thumb {
     background: white;
   }
+
+  .paragrapheWithExample_div {
+    display: flex;
+    align-items: center;
+  }
+
+  .startedExemple_button {
+    height: 40px;
+    border: solid white 3px;
+    padding: 6px;
+    border-radius: 10px;
+    background: none;
+    color: white;
+    cursor: pointer;
+    margin-left: 5px;
+  }
+
+  .circleAnswerColor_div {
+    height: 8px;
+    width: 8px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+.egal_div {
+  margin-right: 10px;
+}
 
   @media screen and (max-width: 700px) {
     .rules_mainContainer {
