--- a/components/InGame/SoccerField/InputPlayer/InputPlayer.module.css
+++ b/components/InGame/SoccerField/InputPlayer/InputPlayer.module.css
@@ -14,3 +14,11 @@
 .playerToFindNone_input {
     display: none;
 }
+
+.ball_svg{
+    height: 10px;
+    width: 10px;
+    position: absolute;
+    top: 8%;
+    left: 10%;
+}
