--- a/components/InGame/SoccerField/TeamContainer/TeamContainer.module.css
+++ b/components/InGame/SoccerField/TeamContainer/TeamContainer.module.css
@@ -208,6 +208,146 @@
     ". . . . . . ."
     "n9 . . n10 . . n11";
 }
+
+/* 5-3-2 */
+.dom532 {  
+    height: 275px;
+    width: 325px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    display: grid;
+    grid-template-columns: 46.42px 46.42px 46.42px 46.42px 46.42px 46.42px 46.42px;
+    grid-template-rows: 45.83px 45.83px 45.83px 45.83px 45.83px 45.83px;
+    grid-template-areas:
+      ". . n11 . n10 . ."
+      ". . . n9 . . ."
+      ". . n8 . n7 . ."
+      "n6 . . . . . n2"
+      ". n5 . n4 . n3 ."
+      "cDom . . n1 . . flag_team1";
+}
+
+.ext532 {  
+    height: 275px;
+    width: 325px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    display: grid;
+    grid-template-columns: 46.42px 46.42px 46.42px 46.42px 46.42px 46.42px 46.42px;
+    grid-template-rows: 45.83px 45.83px 45.83px 45.83px 45.83px 45.83px;
+    grid-template-areas:
+      "cExt . . n1 . . flag_team2"
+      ". n3 . n4 . n5 ."
+      "n2 . . . . . n6"
+      ". . n7 . n8 . ."
+      ". . . n9 . . ."
+      ". . n10 . n11 . .";
+}
+
+/* 4-3-1-2 */
+.dom4312 {  
+    height: 275px;
+    width: 325px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    display: grid;
+    grid-template-columns: 46.42px 46.42px 46.42px 46.42px 46.42px 46.42px 46.42px;
+    grid-template-rows: 45.83px 45.83px 45.83px 45.83px 45.83px 45.83px;
+    grid-template-areas:
+      ". . n11 . n10 . ."
+      ". . . n9 . . ."
+      ". n8 . . . n7 ."
+      ". . . n6 . . ."
+      "n5 . n4 . n3 . n2"
+      "cDom . . n1 . . flag_team1";
+}
+
+.ext4312 {  
+    height: 275px;
+    width: 325px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    display: grid;
+    grid-template-columns: 46.42px 46.42px 46.42px 46.42px 46.42px 46.42px 46.42px;
+    grid-template-rows: 45.83px 45.83px 45.83px 45.83px 45.83px 45.83px;
+    grid-template-areas:
+      "cExt . . n1 . . flag_team2"
+      "n2 . n3 . n4 . n5"
+      ". . . n6 . . ."
+      ". n7 . . . n8 ."
+      ". . . n9 . . ."
+      ". . n10 . n11 . .";
+}
+
+/* 4-2-2-2 */
+.dom4222 {  
+    height: 275px;
+    width: 325px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    display: grid;
+    grid-template-columns: 46.42px 46.42px 46.42px 46.42px 46.42px 46.42px 46.42px;
+    grid-template-rows: 45.83px 45.83px 45.83px 45.83px 45.83px 45.83px;
+    grid-template-areas:
+      ". . n11 . n10 . ."
+      ". n9 . . . n8 ."
+      ". n7 . . . n6 ."
+      ". . . . . . ."
+      "n5 . n4 . n3 . n2"
+      "cDom . . n1 . . flag_team1";
+}
+
+.ext4222 {  
+    height: 275px;
+    width: 325px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    display: grid;
+    grid-template-columns: 46.42px 46.42px 46.42px 46.42px 46.42px 46.42px 46.42px;
+    grid-template-rows: 45.83px 45.83px 45.83px 45.83px 45.83px 45.83px;
+    grid-template-areas:
+      "cExt . . n1 . . flag_team2"
+      "n2 . n3 . n4 . n5"
+      ". . . . . . ."
+      ". n6 . . . n7 ."
+      ". n8 . . . n9 ."
+      ". . n10 . n11 . .";
+}
+
+/* 4-1-3-2 */
+.dom4132 {  
+    height: 275px;
+    width: 325px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    display: grid;
+    grid-template-columns: 46.42px 46.42px 46.42px 46.42px 46.42px 46.42px 46.42px;
+    grid-template-rows: 45.83px 45.83px 45.83px 45.83px 45.83px 45.83px;
+    grid-template-areas:
+      ". . n11 . n10 . ."
+      ". . . . . . ."
+      ". n9 . n8 . n7 ."
+      ". . . n6 . . ."
+      "n5 . n4 . n3 . n2"
+      "cDom . . n1 . . flag_team1";
+}
+
+.ext4132 {  
+    height: 275px;
+    width: 325px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    display: grid;
+    grid-template-columns: 46.42px 46.42px 46.42px 46.42px 46.42px 46.42px 46.42px;
+    grid-template-rows: 45.83px 45.83px 45.83px 45.83px 45.83px 45.83px;
+    grid-template-areas:
+      "cExt . . n1 . . flag_team2"
+      "n2 . n3 . n4 . n5"
+      ". . . n6 . . ."
+      ". n7 . n8 . n9 ."
+      ". . . . . . ."
+      ". . n10 . n11 . .";
+}
 /* END COMPOSITIONS */
 
 /* GRID */
